<resources>
    <string name="app_name">来点色图</string>
    <string name="version">1.5.4</string>
    <string name="info">
        开发者：cbgan\n
        [cbgancna@gmail.com]\n
        要适当手冲哦（\n
        没怎么写过java用脚写的代码要是有什么bug一定要告诉我
    </string>
    <string name="share_setu">share_setu</string>
    <string name="github">GitHub</string>
    <string name="goinfo">关于</string>
    <string name="sw_source">切换源</string>
    <string name="extra_api">怪浪怪浪的</string>
    <string name="license">开源协议</string>
    <string name="gnu_general_public_license_v3">GNU GENERAL PUBLIC LICENSE v3</string>
    <string name="todo">TODO</string>
    <string name="source_key_name">source</string>
    <string name="api_key">API KEY</string>
    <string name="api_key_input_tip">
        请输入当前所用源的API Key\n
        为空时会清空API Key
    </string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
</resources>
